--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -44,25 +44,55 @@
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <com.google.android.material.chip.ChipGroup
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="164dp"
-        tools:layout_editor_absoluteY="364dp">
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/orderID"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="363dp"
+        android:layout_height="83dp"
+        android:text="Order Flowers"
 
-    </com.google.android.material.chip.ChipGroup>
+        app:iconGravity="top"
+        app:iconPadding="8dp"
+        app:iconTint="@null"
+        app:layout_constraintBottom_toTopOf="@+id/checkOrderID"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/topAppBar"
+        app:layout_constraintVertical_bias="0.896" />
 
-    <LinearLayout
-        android:layout_width="370dp"
-        android:layout_height="100dp"
-        android:orientation="horizontal"
-        tools:layout_editor_absoluteX="25dp"
-        tools:layout_editor_absoluteY="147dp">
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/checkOrderID"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="363dp"
+        android:layout_height="83dp"
+        android:layout_marginBottom="24dp"
+        android:text="Check Orders"
+        app:layout_constraintBottom_toTopOf="@+id/FactID"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"></LinearLayout>
-    </LinearLayout>
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/FactID"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="363dp"
+        android:layout_height="83dp"
+        android:layout_marginBottom="224dp"
+        android:text="Fun Fact of the Day"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/goBackbtn"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="123dp"
+        android:layout_height="43dp"
+        android:text="Back"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.083"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/topAppBar"
+        app:layout_constraintVertical_bias="0.937" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
